add plugin mail and start dev form

--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,7 +1,7 @@
 
 
 <div class="w-100" style="background-color: #eee;">
-  <div class="d-table mx-auto" style="background-color: #ddd;">
+  <div class="d-table mx-auto py-3" style="background-color: #ddd;">
     <img src="\espace-natal\src\logo-espace-natal-paris.png" class="img-fluid w-100" alt="logo-espace-natal-paris">
   </div>
   <ul class="nav nav-tabs justify-content-center">
@@ -42,7 +42,7 @@
     </li>
     <!-- Contact -->
     <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link" href="\espace-natal\contact">Contact</a>
     </li>
   </ul>
 </div>
