--- a/style.css
+++ b/style.css
@@ -11,3 +11,6 @@
 /* Rules for using icons as white on a dark background. */
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+
+.primaryColor{ color: rgba(50,119,136,1); }
+.secondaryColor{ color: rgba(169,216,217,1); }
