--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,4 +1,5 @@
 
+<!--  NAVBAR -->
 
 <div class="w-100" style="background-color: #eee;">
   <div class="d-table mx-auto py-3" style="background-color: #ddd;">
