--- a/views/footer.html
+++ b/views/footer.html
@@ -1,5 +1,5 @@
 <!--  FOOTER -->
-<div class="container-fluid my-5" style="background-color: #ddd;">
+<div class="container-fluid my-5" style="background-color: rgba(243,243,243,1);">
   <div class="row py-5">
     <div class="col-2"></div>
     <div class="col-4">
