add partenaires folder//add in navbar

--- a/views/navbar.html
+++ b/views/navbar.html
@@ -44,7 +44,7 @@
     </li>
     <!-- Nos Partenaires -->
     <li class="nav-item">
-      <a class="nav-link" href="#">Nos Partenaires</a>
+      <a class="nav-link" id="idPartenaires" href="\espace-natal\partenaires">Nos Partenaires</a>
     </li>
     <!-- Contact -->
     <li class="nav-item">
