--- a/views/footer.html
+++ b/views/footer.html
@@ -9,12 +9,12 @@
         <strong>contact@espace-natal.com</strong>
     </div>
     <div class="col-4">
-        <a href="\espace-natal">Accueil</a><br>
-        <a href="#">Grossesse & Accouchement</a><br>
-        <a href="#">Chirurgie gynécologique</a><br>
-        <a href="\espace-natal\infertilite">Infertilité</a><br>
-        <a href="#">Nos Partenaires</a><br>
-        <a href="\espace-natal\contact">Contact</a>
+        <a class="inactiveFooter" id="idAccueilFooter" href="\espace-natal">Accueil</a><br>
+        <a class="inactiveFooter" id="idGrossesseAccouchementFooter" href="\espace-natal\grossesse_accouchement">Grossesse & Accouchement</a><br>
+        <a class="inactiveFooter" id="idChirurgieGynecologiqueFooter" href="\espace-natal\chirurgie_gynecologique">Chirurgie gynécologique</a><br>
+        <a class="inactiveFooter" id="idInfertiliteFooter" href="\espace-natal\infertilite">Infertilité</a><br>
+        <a class="inactiveFooter" id="idPartenaireFooter" href="#">Nos Partenaires</a><br>
+        <a class="inactiveFooter" id="idContactFooter" href="\espace-natal\contact">Contact</a>
     </div>
     <div class="col-2"></div>
   </div>
