--- a/views/footer.html
+++ b/views/footer.html
@@ -13,7 +13,7 @@
         <a class="inactiveFooter" id="idGrossesseAccouchementFooter" href="\espace-natal\grossesse_accouchement">Grossesse & Accouchement</a><br>
         <a class="inactiveFooter" id="idChirurgieGynecologiqueFooter" href="\espace-natal\chirurgie_gynecologique">Chirurgie gynécologique</a><br>
         <a class="inactiveFooter" id="idInfertiliteFooter" href="\espace-natal\infertilite">Infertilité</a><br>
-        <a class="inactiveFooter" id="idPartenaireFooter" href="#">Nos Partenaires</a><br>
+        <a class="inactiveFooter" id="idPartenairesFooter" href="\espace-natal\partenaires">Nos Partenaires</a><br>
         <a class="inactiveFooter" id="idContactFooter" href="\espace-natal\contact">Contact</a>
     </div>
     <div class="col-2"></div>
