--- a/views/footer.html
+++ b/views/footer.html
@@ -18,4 +18,8 @@
     </div>
     <div class="col-2"></div>
   </div>
+  <div class="row justify-content-center pt-3" style="background-color:#fff;">
+    <div class="col-4 border-right"><small class="float-right"><strong>Espace Natal</strong></small></div>
+    <div class="col-4"><a href="\espace-natal\mentionsLegales.php"><small class="float-left primaryColor"><strong>Mentions légales</strong></small></a></div>
+    </div>
 </div>
