font change & full maj for navbar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:600,700');
+body {
+  font-family: 'Open Sans', sans-serif; !important;
+}
+
 /* Rules for sizing the icon. */
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
