--- a/style.css
+++ b/style.css
@@ -2,29 +2,62 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 body {
-  font-family: 'Open Sans', sans-serif; !important;
+  font-family: 'Open Sans', sans-serif !important;
 }
 
 /* Rules for sizing the icon. */
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
+.material-icons.md-18 {
+  font-size: 18px;
+}
+
+.material-icons.md-24 {
+  font-size: 24px;
+}
+
+.material-icons.md-36 {
+  font-size: 36px;
+}
+
+.material-icons.md-48 {
+  font-size: 48px;
+}
 
 /* Rules for using icons as black on a light background. */
-.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
-.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
+.material-icons.md-dark {
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.material-icons.md-dark.md-inactive {
+  color: rgba(0, 0, 0, 0.26);
+}
 
 /* Rules for using icons as white on a dark background. */
-.material-icons.md-light { color: rgba(255, 255, 255, 1); }
-.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+.material-icons.md-light {
+  color: rgba(255, 255, 255, 1);
+}
+
+.material-icons.md-light.md-inactive {
+  color: rgba(255, 255, 255, 0.3);
+}
 
 /* COLOR RULES */
-.primaryColor{ color: rgba(50,119,136,1); }
-.secondaryColor{ color: rgba(169,216,217,1); }
+.primaryColor {
+  color: rgba(50, 119, 136, 1);
+}
 
-a.activeFooter{color: rgba(50,119,136,1); font-weight: bold;}
-a.inactiveFooter{color: #888; font-weight:normal;}
+.secondaryColor {
+  color: rgba(169, 216, 217, 1);
+}
+
+a.activeFooter {
+  color: rgba(50, 119, 136, 1);
+  font-weight: bold;
+}
+
+a.inactiveFooter {
+  color: #888;
+  font-weight: normal;
+}
 
 p {
   text-align: justify;
@@ -33,53 +66,81 @@ p {
 
 /* NAVBAR STYLE RULES */
 ul.navbar-nav li a:hover, ul.navbar-nav li a:active {
-    color: rgba(50,119,136,0.7) !important;
+  color: rgba(50, 119, 136, 0.7) !important;
 }
 
-ul.navbar-nav li a  {
-    color: #888 !important;
+ul.navbar-nav li a {
+  color: #888 !important;
 }
 
-ul.navbar-nav li a.active  {
-    color: rgba(50,119,136,1) !important;
-    font-weight: bold;
+ul.navbar-nav li a.active {
+  color: rgba(50, 119, 136, 1) !important;
+  font-weight: bold;
 }
 
-.dropdown .dropdown-menu .dropdown-item:active{
+.dropdown .dropdown-menu .dropdown-item:active {
   color: white !important;
-  background-color: rgba(50,119,136,1) !important;
+  background-color: rgba(50, 119, 136, 1) !important;
 }
 
 /* dropdown on hover */
 @media (min-width: 992px) {
-.dropdown:hover .dropdown-menu {
+  .dropdown:hover .dropdown-menu {
     display: block;
-    margin-top: 0; // remove the gap so it doesn't close
- }
+    margin-top: 0;
+    /* remove the gap so it doesn't close*/
+  }
 }
 
 @media (min-width: 992px) {
- .navbar-nav {
-     float:none;
-     margin:0 auto;
-     display: block;
-     text-align: center;
- }
+  .navbar-brand {
+    position: absolute;
+    left: 50%;
+    transform:translateX(-50%) !important;
+    /* 50% of your logo width */
+    display: block;
+    top: 0;
+  }
+  .navbar-nav {
+    float: none;
+    margin: 0 auto;
+    margin-top: 8em;
+    display: block;
+    text-align: center;
+  }
 
- .navbar-nav > li {
-     display: inline-block;
-     float:none;
- }
+  .navbar-nav>li {
+    display: inline-block;
+    float: none;
+  }
+  #idNavbarHeader{
+    width: 100%;
+    padding-top: 1em;
+  }
+  #idBrandLogoLargeScreen{
+    width: 50%;
+  }
 }
 
- @media (max-width: 992px) {
-    .navbar .navbar-nav {
-        display: inline-block;
-        float: none;
-        vertical-align: top;
-    }
 
-    .navbar .navbar-collapse {
-        text-align: center;
-    }
+@media (max-width: 992px) {
+  .navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+    vertical-align: top;
+  }
+
+  .navbar .navbar-collapse {
+    text-align: center;
+  }
+  #idNavbarHeader{
+    width: 50%;
+    padding-top: 1em;
+  }
+  #idBrandLogoLargeScreen{
+    width: 300px;
+  }
+  .navbar-brand {
+    position: relative;
+  }
 }
