fix footer breakpoint

--- a/views/footer.html
+++ b/views/footer.html
@@ -2,13 +2,13 @@
 <div class="container-fluid my-5" style="background-color: rgba(243,243,243,1);">
   <div class="row py-5">
     <div class="col-2"></div>
-    <div class="col-4">
-        <img src="\espace-natal\src\logo-footer-espace-natale.png" class="img-fluid w-50" alt="logo-footer-espace-natale"><br>
+    <div class="col-lg-4 mb-3">
+        <img src="\espace-natal\src\logo-footer-espace-natale.png" class="w-50" alt="logo-footer-espace-natale"><br>
         <small>5 rue Faustin Hélie, 75116 Paris</small> <br>
         <strong>01.45.03.53.63</strong> <br>
         <strong>contact@espace-natal.com</strong>
     </div>
-    <div class="col-4">
+    <div class="col-lg-4">
         <a class="inactiveFooter" id="idAccueilFooter" href="\espace-natal">Accueil</a><br>
         <a class="inactiveFooter" id="idGrossesseAccouchementFooter" href="\espace-natal\grossesse_accouchement">Grossesse & Accouchement</a><br>
         <a class="inactiveFooter" id="idChirurgieGynecologiqueFooter" href="\espace-natal\chirurgie_gynecologique">Chirurgie gynécologique</a><br>
@@ -16,7 +16,7 @@
         <a class="inactiveFooter" id="idPartenairesFooter" href="\espace-natal\partenaires">Nos Partenaires</a><br>
         <a class="inactiveFooter" id="idContactFooter" href="\espace-natal\contact">Contact</a>
     </div>
-    <div class="col-2"></div>
+    <div class="col-2" ></div>
   </div>
   <div class="row justify-content-center pt-3" style="background-color:#fff;">
     <div class="col-4 border-right"><small class="float-right"><strong>Espace Natal</strong></small></div>
