--- a/views/navbar.html
+++ b/views/navbar.html
@@ -32,10 +32,10 @@
             GROSSESSE & ACCOUCHEMENT
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="\espace-natal\grossesse_accouchement">Grossesse physiologique</a>
-            <a class="dropdown-item" href="#">Grossesse pathologique</a>
+            <a class="dropdown-item" href="\espace-natal\grossesse_accouchement\grossesse_physiologique.php">Grossesse physiologique</a>
+            <a class="dropdown-item" href="\espace-natal\grossesse_accouchement\grossesse_pathologique.php">Grossesse pathologique</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Accouchement</a>
+            <a class="dropdown-item" href="\espace-natal\grossesse_accouchement\accouchement.php">Accouchement</a>
           </div>
         </li>
 
@@ -45,9 +45,9 @@
             CHIRURGIE GYNÉCOLOGIQUE
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="\espace-natal\chirurgie_gynecologique">Pathologies</a>
-            <a class="dropdown-item" href="#">Les techniques opératoires</a>
-            <a class="dropdown-item" href="#">Les spécialistes</a>
+            <a class="dropdown-item" href="\espace-natal\chirurgie_gynecologique\pathologies.php">Pathologies</a>
+            <a class="dropdown-item" href="\espace-natal\chirurgie_gynecologique\techniques_operatoires.php">Les techniques opératoires</a>
+            <a class="dropdown-item" href="\espace-natal\chirurgie_gynecologique\specialistes.php">Les spécialistes</a>
           </div>
         </li>
 
@@ -57,9 +57,9 @@
             INFERTILITÉ
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="\espace-natal\infertilite">Bilan de fertilité</a>
-            <a class="dropdown-item" href="#">Bilan d’infertilité</a>
-            <a class="dropdown-item" href="#">Prise en charge</a>
+            <a class="dropdown-item" href="\espace-natal\infertilite\bilan_fertilite.php">Bilan de fertilité</a>
+            <a class="dropdown-item" href="\espace-natal\infertilite\bilan_infertilite.php">Bilan d’infertilité</a>
+            <a class="dropdown-item" href="\espace-natal\infertilite\prise_en_charge.php">Prise en charge</a>
           </div>
         </li>
 
