--- a/style.css
+++ b/style.css
@@ -155,6 +155,23 @@ ul.navbar-nav li a.active {
    background-color: rgba(250, 250, 250, 0.85);
    padding: 3em 3.5em;
 }
+.imgContainerAccueil{
+  position:absolute;
+  top: 0px;
+  left: 0;
+  width:100%;
+  height: 100%;
+   z-index:2;
+   background-color: rgba(250, 250, 250, 0.4);
+}
+.txtContainerAccueil{
+  position:absolute;
+  transform:translate(-25%,-50%);
+  top: 50%;
+  left: 25%;
+   z-index:2;
+   padding: 3em 3.5em;
+}
 h1{
 
   font-weight: 700;
