--- a/views/navbar.html
+++ b/views/navbar.html
@@ -9,7 +9,7 @@
   </div-->
 
   <!-- NAVS -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <!--div class="navbar-header" id="idNavbarLogo" style="background-color: #000;"-->
       <a class="navbar-brand" href="\espace-natal">
           <!--img src="\espace-natal\src\logo-espace-natal-paris.png" width="240" height="69" id="idBrandLogoSmallScreen" alt="logo-espace-natal-paris"-->
