breakpoint for contact view

--- a/views/contact.html
+++ b/views/contact.html
@@ -7,25 +7,27 @@
     </div>
   </div>
   <!-- ADRESSE -->
-  <div class="row mb-3" style="text-align:center;">
-    <div class="col-4">
-      <i class="material-icons primaryColor md-36">room</i>
+  <!--div class="row mb-3" style="text-align:center;">
+    <div class="col-lg-4">
+      <i class="material-icons primaryColor md-48">room</i>
     </div>
-    <div class="col-4">
-      <i class="material-icons primaryColor md-36">call</i>
+    <div class="col-lg-4">
+      <i class="material-icons primaryColor md-48">call</i>
     </div>
-    <div class="col-4">
-      <i class="material-icons primaryColor md-36">mail_outline</i>
+    <div class="col-lg-4">
+      <i class="material-icons primaryColor md-48">mail_outline</i>
     </div>
 
-  </div>
+  </div-->
   <!-- TELEPHONE -->
   <div class="row mb-3" style="text-align:center;">
-    <div class="col-4">
+    <div class="col-md-4 mb-5">
+      <i class="material-icons primaryColor md-48">room</i>
       <h6 style="font-weight: 700;">ADRESSE :</h6>
       <small class="grayColor" style="font-weight: 700;">5 rue Faustin Hélie, 75116 Paris</small>
     </div>
-    <div class="col-4">
+    <div class="col-md-4 mb-5">
+      <i class="material-icons primaryColor md-48">call</i>
       <h6 style="font-weight: 700;">TÉLÉPHONE :</h6>
       <small class="grayColor" style="font-weight: 700;">Contactez le secrétariat</small>
       <br>
@@ -33,7 +35,8 @@
       <br>
       <strong class="primaryColor">01.45.03.53.63</strong>
     </div>
-    <div class="col-4">
+    <div class="col-md-4 mb-5">
+      <i class="material-icons primaryColor md-48">mail_outline</i>
       <h6 style="font-weight: 700;">E-MAIL :</h6>
       <small class="grayColor" style="font-weight: 700;">Envoyez un mail 7j/7 et 24h/24</small>
       <br>
@@ -43,7 +46,7 @@
   <!-- DOCTOLIB -->
   <div class="row my-3">
     <div class="col-12" style="text-align:center;">
-      <p class="mt-5" style="text-align:center;font-weight: 700;">Vous pouvez également prendre directement rendez-vous sur Doctolib :</p>
+      <p class="my-5" style="text-align:center;font-weight: 700;">Vous pouvez également prendre directement rendez-vous sur Doctolib :</p>
       <a class="btn btn-default shadow rounded-pill ml-4 w-25" href="https://www.doctolib.fr/maison-perinatale/paris/espace-natal" target="_blank" style="background-color: #fff;">
         <div class="d-inline w-100">
           <img src="\espace-natal\src\logo-doctolib.jpg" class="w-50">
