--- a/views/contact.html
+++ b/views/contact.html
@@ -48,7 +48,7 @@
     <div class="col-12" style="text-align:center;">
       <p class="my-5" style="text-align:center;font-weight: 700;">Vous pouvez également prendre directement rendez-vous sur Doctolib :</p>
       <a class="btn btn-default shadow rounded-pill ml-4 w-25" href="https://www.doctolib.fr/maison-perinatale/paris/espace-natal" target="_blank" style="background-color: #fff;">
-        <div class="d-inline w-100">
+        <div class="d-inline">
           <img src="\espace-natal\src\logo-doctolib.jpg" class="w-50">
         </div>
       </a>
