--- a/css/accordion.css
+++ b/css/accordion.css
@@ -1,10 +1,12 @@
 ul { list-style: none; }
 .menu-link{
   text-decoration: none !important;
-  color: black;
+  color: gray;
+  font-weight: 700;
 }
 .accordion-toggle.active-tab .menu-link{
-  color: white;
+  color: rgba(50, 119, 136, 1);
+  font-weight: 700;
 }
 /*a { text-decoration: none !important; color: black;}*/
 #menu-wrapper {
@@ -56,11 +58,13 @@ ul { list-style: none; }
     opacity: 0;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     left: -60px;
+
 }
 #menu-wrapper #hamburger-menu.open span:nth-child(3) {
     top: 9px;
     -webkit-transform: rotate(-135deg);
     transform: rotate(-135deg);
+
 }
 
 #menu-container .menu-list .menu-submenu {
@@ -128,8 +132,9 @@ ul { list-style: none; }
 }
 
 .accordion-toggle.active-tab {
-  background: rgba(50, 119, 136, 1);
+  /*background: rgba(50, 119, 136, 1);*/
   transition: all 0.3s ease;
+  /*border-color: rgba(50, 119, 136, 1);*/
 }
 .accordion-toggle a.active:before {
     -webkit-transform: rotate(0deg);
