--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 @media (min-width: 992px) {
   html {
-    font-size: 1vw;
+    font-size: 0.95vw;
   }
 }
 
@@ -181,7 +181,7 @@ ul.navbar-nav li a.active {
   }
 
   #idBrandLogoLargeScreen {
-    width: 300px;
+    width: 250px;
   }
 
   .navbar-brand {
@@ -240,3 +240,27 @@ h1 {
   text-decoration: underline;
   color: rgba(50, 119, 136, 1);
 }
+h3{
+  color: rgba(50, 119, 136, 1);
+  font-weight: 700;
+}
+h5{
+  color: rgba(50, 119, 136, 1);
+  font-weight: 600;
+}
+h6{
+  /*color: rgba(142, 147, 160, 1);*/
+  font-weight: 600;
+}
+h6 small {
+  color: rgba(142, 147, 160, 1);
+}
+/*
+a{
+  color: rgba(162, 69, 124, 1);
+  font-weight: 700;
+  text-decoration: underline;
+}
+a:hover{
+color:   rgba(5, 74, 91, 1);
+}*/
