--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
+/* Rules for font size */
 @media (max-width: 768px) {
-  html{
+  html {
     font-size: 2.6vw;
   }
 }
 
 @media (min-width: 768px) and (max-width: 992px) {
-  html{
+  html {
     font-size: 1.9vw;
   }
 }
+
 @media (min-width: 992px) {
   html {
     font-size: 0.95vw;
   }
 }
 
+/* Font type */
 body {
   font-family: 'Open Sans', sans-serif !important;
 }
@@ -121,6 +124,7 @@ ul.navbar-nav li a.active {
   }
 }
 
+/* Large Screen */
 @media (min-width: 992px) {
   .navbar-brand {
     position: absolute;
@@ -149,9 +153,11 @@ ul.navbar-nav li a.active {
     padding-top: 1em;
   }
 
+  /* size logo in navbar */
   #idBrandLogoLargeScreen {
     width: 50%;
   }
+
   .imgContainerContact {
     position: absolute;
     transform: translate(-25%, -50%);
@@ -164,6 +170,7 @@ ul.navbar-nav li a.active {
   }
 }
 
+/* Small Screen */
 @media (max-width: 992px) {
   .navbar .navbar-nav {
     display: inline-block;
@@ -180,6 +187,7 @@ ul.navbar-nav li a.active {
     padding-top: 1em;
   }
 
+  /* size logo in navbar */
   #idBrandLogoLargeScreen {
     width: 250px;
   }
@@ -188,18 +196,16 @@ ul.navbar-nav li a.active {
     position: relative;
   }
 
-  .imgContainerContact{
+  .imgContainerContact {
     position: absolute;
     top: 0px;
     left: 0px;
     width: 100%;
-    height : 100%;
+    height: 100%;
     background-color: rgba(250, 250, 250, 0.4);
     padding: 3em 3.5em;
   }
 }
-
-
 
 .imgContainerAccueil {
   position: absolute;
@@ -220,6 +226,7 @@ ul.navbar-nav li a.active {
   padding: 3em 3.5em;
 }
 
+/* Overwrite btn caracs */
 .btn-primary {
   background-color: rgba(50, 119, 136, 1);
   border-color: rgba(50, 119, 136, 1);
@@ -240,21 +247,26 @@ h1 {
   text-decoration: underline;
   color: rgba(50, 119, 136, 1);
 }
-h3{
+
+h3 {
   color: rgba(50, 119, 136, 1);
   font-weight: 700;
 }
-h5{
+
+h5 {
   color: rgba(50, 119, 136, 1);
   font-weight: 600;
 }
-h6{
+
+h6 {
   /*color: rgba(142, 147, 160, 1);*/
   font-weight: 600;
 }
+
 h6 small {
   color: rgba(142, 147, 160, 1);
 }
+
 /*
 a{
   color: rgba(162, 69, 124, 1);
