add margin navbar-logo and add clickable link for tel and mail

--- a/views/navbar.html
+++ b/views/navbar.html
@@ -11,10 +11,10 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <div class="collapse navbar-collapse mt-5" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <!-- ACCUEIL -->
-      <a class="navbar-item" href="\espace-natal"> <i class="material-icons primaryColor" style="vertical-align:text-top;">home</i> </a>
+      <a class="navbar-item" href="\espace-natal"> <i class="material-icons primaryColor" style="vertical-align:middle;">home</i> </a>
 
       <!-- Grossesse & Accouchement -->
       <li class="nav-item dropdown">
