--- a/views/contact.html
+++ b/views/contact.html
@@ -33,14 +33,16 @@
       <br>
       <small class="grayColor" style="font-weight: 700;">Du lundi au vendredi de 9h à 19h</small>
       <br>
-      <strong class="primaryColor">01.45.03.53.63</strong>
+      <strong><a href="tel:+33145035363" class="primaryColor">01.45.03.53.63</a></strong>
+      <!--strong class="primaryColor">01.45.03.53.63</strong-->
     </div>
     <div class="col-md-4 mb-5">
       <i class="material-icons primaryColor md-48">mail_outline</i>
       <h6 style="font-weight: 700;">E-MAIL :</h6>
       <small class="grayColor" style="font-weight: 700;">Envoyez un mail 7j/7 et 24h/24</small>
       <br>
-      <strong class="primaryColor">contact@espace-natal.com</strong>
+      <!--strong class="primaryColor">contact@espace-natal.com</strong-->
+      <strong><a href="mailto:contact@espace-natal.com?Subject=Contact" target="_top" class="primaryColor">contact@espace-natal.com</a></strong>
     </div>
   </div>
   <!-- DOCTOLIB -->
